--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Read the Mapbox API key\n",
     "load_dotenv()\n",
-    "map_box_api = os.getenv(\"mapbox\")\n",
+    "map_box_api = os.getenv(\"MBOX_key\")\n",
     "px.set_mapbox_access_token(map_box_api)"
    ]
   },
@@ -309,9 +309,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv25] *",
+   "display_name": "Python [conda env:pyvizenv] *",
    "language": "python",
-   "name": "conda-env-pyvizenv25-py"
+   "name": "conda-env-pyvizenv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   },
   "mimetype": "text/x-python",
   "name": "python",
